<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/activity_registration_logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/activity_registration_txtsignin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|right"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_110sdp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:hint="@string/repassword"
                android:text="@string/signin"
                android:textColor="@android:color/holo_blue_dark"
                android:textColorHint="@color/black"
                android:textSize="@dimen/_15sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_2sdp"
                android:background="@android:color/darker_gray" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_margin="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/loginbtn_bg"
                android:gravity="center_vertical">


                <EditText
                    android:id="@+id/activity_register_edfullname"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:gravity="center|left"
                    android:hint="@string/fullname"
                    android:inputType="text"
                    android:paddingLeft="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/loginbtn_bg"
                android:gravity="center_vertical">


                <EditText
                    android:id="@+id/activity_register_edusername"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:background="@android:color/transparent"
                    android:gravity="center|left"
                    android:hint="@string/username"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"

                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/loginbtn_bg"
                android:gravity="center_vertical">


                <EditText
                    android:id="@+id/activity_register_edemail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:gravity="center|left"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />


            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/loginbtn_bg"
                android:gravity="center_vertical">


                <EditText
                    android:id="@+id/activity_register_edpassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:gravity="center|left"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/loginbtn_bg"
                android:gravity="center_vertical">


                <Spinner
                    android:id="@+id/activity_register_spinnercountry"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@android:color/transparent"
                    android:gravity="center|left"
                    android:paddingLeft="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center">

                <TextView
                    android:id="@+id/activity_registration_txtreg"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="match_parent"
                    android:background="@color/blue"
                    android:gravity="center"
                    android:hint="@string/repassword"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/signup"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/_15sdp" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
