<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/activity_login_linearlyout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_60sdp"
                    android:background="@color/light_blue"
                    android:orientation="horizontal"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center|top"
                    android:paddingTop="@dimen/_10sdp"
                    android:text="@string/daberny"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_18sdp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_50sdp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/activity_login_txtsign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|left"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:gravity="center|left"
                    android:text="@string/signin"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="@dimen/_16sdp" />

                <TextView
                    android:id="@+id/activity_login_txtforgot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|right"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_toRightOf="@+id/activity_login_txtsign"
                    android:gravity="center|right"
                    android:text="@string/forgot_pwd"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_15sdp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_2sdp"
                    android:layout_below="@+id/activity_login_txtforgot"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@android:color/darker_gray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/activity_login_user"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:padding="@dimen/_5sdp"
                    android:src="@mipmap/ic_username" />

                <EditText

                    android:id="@+id/actvity_login_edemail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:background="@drawable/loginbtn_bg"
                    android:gravity="center|left"
                    android:hint="@string/email"
                    android:paddingLeft="@dimen/_5sdp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/activity_login_password"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:padding="@dimen/_10sdp"
                    android:src="@mipmap/ic_password" />

                <EditText
                    android:id="@+id/actvity_login_edpassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:background="@drawable/loginbtn_bg"
                    android:gravity="center|left"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/_5sdp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_15sdp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="match_parent"
                        android:padding="@dimen/_15sdp"
                        android:src="@drawable/ic_pass" />

                    <TextView
                        android:id="@+id/activity_login_txtlogin"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_gravity="center|right"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:background="@color/blue"
                        android:gravity="center"
                        android:text="@string/login"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        android:textSize="@dimen/_15sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/btnfblogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="30dp"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/activity_login_txtfblogin"
                        android:layout_width="@dimen/_180sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:background="@drawable/fb_bg"
                        android:gravity="center"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/fblogin"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        android:textSize="@dimen/_15sdp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_2sdp"
                    android:layout_below="@+id/activity_login_txtlogin"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center|top|left"
                        android:gravity="center|left"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/dont_account"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_13sdp" />

                    <TextView
                        android:id="@+id/activity_login_txtcreate_account"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center|top|left"
                        android:gravity="center|left"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/create_account"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="@dimen/_13sdp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
